force-app/main/default/objects/OpportunityLineItem/fields/Cost_Sheet_Number__c.field-meta.xml
<CustomField>
    <fullName>Cost_Sheet_Number__c</fullName>
    <label>Cost Sheet Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>