force-app/main/default/objects/OpportunityLineItem/fields/Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Year__c</fullName>
    <description>Reporting year of opportunity line item.  Populated via integration.</description>
    <label>Fiscal Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>