force-app/main/default/objects/OpportunityLineItem/fields/PNNL_Project_Account_No__c.field-meta.xml
<CustomField>
    <fullName>PNNL_Project_Account_No__c</fullName>
    <externalId>true</externalId>
    <label>Project Account No</label>
    <length>6</length>
    <type>Text</type>
</CustomField>