force-app/main/default/objects/OpportunityLineItem/fields/Summary_Amount__c.field-meta.xml
<CustomField>
    <fullName>Summary_Amount__c</fullName>
    <description>Some cost sheet line items will display actual cost of line while others will display units of resource utilized.  This formula field adjusts for those lines.</description>
    <formula>IF(AND(Quantity &gt; 0, UnitPrice == 0),Quantity,TotalPrice)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Summary Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>